Fix course title having a really bad contrast mismatch with background color

--- a/frontend/src/pages/courses/CoursesPage.module.scss
+++ b/frontend/src/pages/courses/CoursesPage.module.scss
@@ -2,6 +2,7 @@
 
 .course {
     display: flex;
+    color: white;
     background-color: colors.$surface-variant;
 
     &.information-container {
